Generate & Gallery Added

--- a/Ai Generator/index.html
+++ b/Ai Generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Ai Image Generator</title>
 </head>
 <body>
     <header>
@@ -29,5 +29,50 @@
             <div></div>
         </label>
     </header>
+    <section class="image-generator">
+        <div class="content">
+                <h1>Ai Image Generator Tool</h1>
+                <p>onvert your text into an image within a second using this Ai image generator</p>
+                <form action="#" class="prompt">
+                    <input type="text" class="prompt-input" placeholder="Describe your image here" required>
+                    <div class="controls">
+                        <select class="img-quantity">
+                            <option value="1">1 Image</option>
+                            <option value="2">2 Images</option>
+                            <option value="3">3 Images</option>
+                            <option value="4" selected>4 Images</option>
+                        </select>
+                        <button type="submit" class="generate-btn">Generate</button>
+                    </div>
+                </form>
+        </div>
+    </section>
+    <section class="generated-images">
+        <div class="img-card">
+            <img src="1.webp" alt="" srcset="">
+            <a href="#" class="download-btn">
+                <img src="download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="img-card">
+            <img src="2.webp" alt="" srcset="">
+            <a href="#" class="download-btn">
+                <img src="download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="img-card">
+            <img src="3.webp" alt="" srcset="">
+            <a href="#" class="download-btn">
+                <img src="download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="img-card">
+            <img src="4.webp" alt="" srcset="">
+            <a href="#" class="download-btn">
+                <img src="download.svg" alt="download icon">
+            </a>
+        </div>
+    </section>
 </body>
 </html>
+
